=== gnome-user-share 0.41 ===

2008-12-17  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.41

2008-12-16  Baptiste Mille-Mathias  <baptiste.millemathias@gmail.com>

	* src/obexpush.c:
	* po/*.po: correct a typo (Bluetooh instead of Bluetooth).
	(Closes bug 564784)

2008-11-27  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	- detect httpd, apache2 and httpd2 for SUSE and Ubuntu compat
	- Better parsing of httpd versions from Vincent Untz
	<vuntz@gnome.org>
	- Bail out if the httpd version isn't supported, or badly detected
	(Closes: #542513)

2008-11-27  Bastien Nocera  <hadess@hadess.net>

	* data/dav_user_2.2.conf.in: Fix httpd startup error when
	the module_path doesn't have a trailing slash (Closes: #561621)

2008-10-08  Christian Persch  <chpe@gnome.org>

	Bug 555555 – minor HIG layout problems in the prefs dialogue

	* data/file-share-properties.glade: Fix prefs dialogue border,
	spacings, strings to be HIG compliant. Add mnemonics.

2008-10-08  Bastien Nocera  <hadess@hadess.net>

	* src/obexpush.c (notification_launch_action_on_file_cb):
	Require gtk+ 2.14.0 now that it's out

2008-09-22  Bastien Nocera  <hadess@hadess.net>

	* src/obexpush.c (device_is_authorised), (cancelled_cb):
	Port to the BlueZ 4.x API (Closes: #522404)

=== gnome-user-share 0.40 ===

2008-09-22  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.40

2008-08-23  Baptiste Mille-Mathias  <baptiste.millemathias@gmail.com>

	* data/file-share-properties.glade:
	Modify GtkFrame widgets to avoid they expand on vertical resizing.
	(Closes: #549053)

2008-06-13  Baptiste Mille-Mathias

	* src/user-share.c (consolekit_init), (sessionchanged_cb):
	Check Active session using ConsolerKit, and disable obex sharing
	if the session is not the action one.
	<baptiste.millemathias@gmail.com> (Closes: #515553)

2008-06-12  Bastien Nocera  <hadess@hadess.net>

	* src/obexpush.c (notification_launch_action_on_file_cb),