@@ -55,45 +55,20 @@ AC_ARG_WITH(httpd-version, [  --with-httpd-version=VERSION         	Httpd versio
 	
 AC_SUBST(HTTPD_VERSION)
 
-if test "x$HTTPD_VERSION" != "x2.0" && test "x$HTTPD_VERSION" != "x2.2" ; then
-	AC_MSG_ERROR([Could not detect a supported HTTPD version (2.0 or 2.2)])
-fi
-	
-AM_CONDITIONAL(HAVE_AVAHI, false)
-AM_CONDITIONAL(HAVE_HOWL, false)
-			  
-AC_ARG_ENABLE(avahi, [  --disable-avahi     build without avahi support])
-msg_avahi=no
-if test "x$enable_avahi" != "xno"; then
-	PKG_CHECK_MODULES(AVAHI, avahi-glib >= 0.6 avahi-client >= 0.6,
-		  	[AM_CONDITIONAL(HAVE_AVAHI, true)
-		   	AC_DEFINE(HAVE_AVAHI, [], [Set if we can use avahi])]
-                        msg_avahi=yes,
-	          	[AM_CONDITIONAL(HAVE_AVAHI, false)])
-	AC_SUBST(AVAHI_CFLAGS)
-	AC_SUBST(AVAHI_LIBS)
-fi
-			  
-AC_ARG_ENABLE(howl, [  --disable-howl     build without howl support])
-msg_howl=no
-if test "x$msg_avahi" = "xno" -a "x$enable_howl" != "xno"; then
-	PKG_CHECK_MODULES(HOWL, howl >= 0.9.6,
-		  	[AM_CONDITIONAL(HAVE_HOWL, true)
-		   	AC_DEFINE(HAVE_HOWL, [], [Set if we can use howl])]
-                        msg_howl=yes,
-	          	[AM_CONDITIONAL(HAVE_HOWL, false)])
-	AC_SUBST(HOWL_CFLAGS)
-	AC_SUBST(HOWL_LIBS)
+if test "x$HTTPD_VERSION" != "x2.2" ; then
+	AC_MSG_ERROR([Could not detect a supported HTTPD version (2.2)])
 fi
 
+# FIXME disabled for now, as the configuration for 2.0 hasn't been ported to
+# use mod_dnssd
+#if test "x$HTTPD_VERSION" != "x2.0" && test "x$HTTPD_VERSION" != "x2.2" ; then
+#	AC_MSG_ERROR([Could not detect a supported HTTPD version (2.0 or 2.2)])
+#fi
+	
 PKG_CHECK_EXISTS(dbus-1 >= 1.1.1, have_dbus_1_1=true, have_dbus_1_1=false)
 if $have_dbus_1_1 ; then
    DBUS_MODULES=dbus-1
    AC_DEFINE(HAVE_DBUS_1_1, 1, [Set to true if we have D-BUS 1.1])
-fi
-
-if test "x$msg_avahi" = "xno" -a "x$msg_howl" = "xno"; then
-  AC_MSG_ERROR([Neither avahi nor howl detected. Gnome-user-share needs a mDNS implementation.])
 fi
 
 PKG_CHECK_MODULES(USER_SHARE, glib-2.0 >= 2.15.2 gio-2.0 gdk-x11-2.0 gtk+-2.0 gconf-2.0 dbus-glib-1 libnotify $DBUS_MODULES)
@@ -169,6 +144,13 @@ fi
 
 MODULES_PATH=$with_modules_path
 AC_SUBST(MODULES_PATH)
+
+dnl ==========================================================================
+dnl Check for mod_dnssd
+
+if test ! -f $with_modules_path/mod_dnssd.so ; then
+	AC_MSG_ERROR([mod_dnssd is required to use gnome-user-share])
+fi
 
 dnl ==========================================================================
 
